# csdiff

./: .gitignore  .packit.yaml  .travis.yml  05-old.err  CMakeLists.txt  Makefile  README  TODO  abstract-filter.cc  abstract-filter.hh  abstract-parser.cc  abstract-parser.hh  abstract-writer.cc  abstract-writer.hh  color.hh  csannot.cc  csdiff-core.cc  csdiff-core.hh  csdiff.cc  csdiff.h2m  csdiff.hh  csdiff.lex  csfilter.cc  csfilter.hh  csgrep.cc  csgrep.h2m  cshtml.cc  cshtml.h2m  csjson  csjson.cc  cslinker.cc  csparser-priv.hh  csparser.cc  csparser.hh  csparser.lex  cssort.cc  cstat-core.cc  cstat-core.hh  cstat.cc  cstrans-df-run.cc  (+29 more)
src/: CMakeLists.txt  abstract-filter.cc  abstract-filter.hh  abstract-parser.cc  abstract-parser.hh  abstract-tree.hh  abstract-writer.cc  abstract-writer.hh  color.cc  color.hh  csdiff-core.cc  csdiff-core.hh  csdiff.cc  csfilter-kfp  csfilter.cc  csfilter.hh  csgrep.cc  cshtml.cc  cslinker.cc  csparser.cc  csparser.hh  cssort.cc  cstrans-df-run.cc  csv-parser.cc  csv-parser.hh  cswriter.cc  cswriter.hh  cwe-mapper.cc  cwe-mapper.hh  cwe-name-lookup.cc  cwe-name-lookup.hh  defect.hh  deflookup.cc  defqueue.cc  defqueue.hh  gcc-parser.cc  gcc-parser.hh  html-writer.cc  html-writer.hh  instream.cc  (+29 more)
src/lib/: CMakeLists.txt  abstract-filter.cc  abstract-filter.hh  abstract-tree.hh  color.cc  csdiff-core.cc  csdiff-core.hh  csv-parser.cc  csv-parser.hh  cwe-mapper.cc  cwe-mapper.hh  cwe-name-lookup.cc  cwe-name-lookup.hh  defect.hh  deflookup.cc  filter.cc  filter.hh  finger-print.cc  finger-print.hh  glob-expand.cc  glob-expand.hh  hash-util.hh  instream.cc  instream.hh  msg-filter.cc  msg-filter.hh  parser-common.cc  parser-common.hh  parser-cov.cc  parser-cov.hh  parser-gcc.cc  parser-json-cov.cc  parser-json-cov.hh  parser-json-gcc.cc  parser-json-sarif.cc  parser-json-sarif.hh  parser-json-shchk.cc  parser-json-simple.cc  parser-json-zap.cc  parser-json-zap.hh  (+23 more)
tests/: CMakeLists.txt  TODO  sync-diff.sh  test-lib.sh
tests/csannot/: 00-input.err  00-output.err  01-input.err  01-output.err  def-to-cwe.map
tests/csdiff/: CMakeLists.txt  sync-diff.sh
tests/csfilter-kfp/: 0001-args.txt  0001-stdin.txt  0001-stdout.txt  0002-args.txt  0002-stdout.txt  0003-args.txt  0003-stdout.txt  0004-args.txt  0004-stdin.txt  0004-stdout.txt  CMakeLists.txt  sync.zsh
tests/csgrep/: 00-args.txt  00-stdin.txt  00-stdout.txt  0002-compiler-warnings-args.txt  0005-compiler-warnings-stdin.txt  0009-err-file-comments-stdin.txt  0010-err-file-comments-stdout.txt  0011-err-file-comments-args.txt  0012-llvm-build-warnings-args.txt  0013-llvm-build-warnings-stdin.txt  0014-llvm-build-warnings-args.txt  0014-llvm-build-warnings-stdout.txt  0015-llvm-build-warnings-stdin.txt  0016-compiler-warnings-stdout.txt  0018-compiler-warnings-args.txt  0019-clang-warnings-args.txt  0021-compiler-warnings-stdin.txt  0022-compiler-warnings-stdout.txt  0024-compiler-warnings-args.txt  0024-compiler-warnings-stdout.txt  0025-compiler-warnings-args.txt  0026-cov-format-errors-stdout.txt  0028-cov-format-errors-stdout.txt  0029-cov-format-errors-args.txt  0029-cov-format-errors-stdin.txt  0029-cov-format-errors-stdout.txt  0034-csgrep-color-stdin.txt  0035-cov-format-errors-stdin.txt  0035-cov-format-errors-stdout.txt  0036-csgrep-json-stdout.txt  0037-csgrep-json-stdin.txt  0041-gcc-parser-pylint-stdout.txt  0042-gcc-parser-smatch-stdin.txt  0043-gcc-parser-smatch-stdin.txt  0043-gcc-parser-smatch-stdout.txt  0044-csparser-new-key-evts-stdin.txt  0044-csparser-new-key-evts-stdout.txt  0045-gcc-parser-clang-stdin.txt  0045-gcc-parser-clang-stdout.txt  0046-cov-json-v2-stdin.txt  (+290 more)
tests/cshtml/: CMakeLists.txt
tests/cslinker/: CMakeLists.txt  test-lib-cslinker.sh
tests/csparser-5.8/: 00-stderr.txt  00-stdout.txt  01-stderr.txt  01-stdin.txt  01-stdout.txt  atlas-3.8.4-1.el6.err  netpbm-10.35.58-9.el5-truncated.err
tests/cssort/: CMakeLists.txt  sync-diff.sh
tests/cssort-5.8/: 00-by-path.err  00-input.err  01-by-checker.err  01-input.err  02-by-checker.err  02-by-path.err  02-input.err  03-by-checker.err  03-by-path.err  03-input.err  netpbm-10.35.58-9.el5-truncated.js
tests/cssort-misc/: 00-by-checker.err
tests/cstrans-df-run/: 0001-sf-stdout.txt  0001-stdin.txt  0001-stdout.txt  0002-sf-stdout.txt  0002-stdin.txt  0002-stdout.txt  0003-sf-stdout.txt  0003-stdin.txt  0003-stdout.txt  0004-sf-stdout.txt  0004-stdin.txt  0004-stdout.txt  0005-sf-stdout.txt  0005-stdin.txt  0005-stdout.txt  0006-stdin.txt  0007-sf-stdout.txt  0007-stdin.txt  0007-stdout.txt  0008-sf-stdout.txt  0008-stdin.txt  0008-stdout.txt  0009-sf-stdout.txt  0009-stdin.txt  0009-stdout.txt  0010-sf-stdout.txt  0010-stdin.txt  0010-stdout.txt  0011-sf-stdout.txt  0011-stdin.txt  0011-stdout.txt  0012-sf-stdout.txt  0012-stdout.txt  CMakeLists.txt  sync.zsh
tests/diff-misc/: 00-new.err  00-old.err  01-new.err  04-new.err  04-old.err  05-fix-z.err  05-new.err  07-new.err  08-new.err  08-old.err  09-shellcheck-raw-add-z.err  10-pylint-copr-new.err  10-pylint-copr-old.err  11-pylint-copr-json-new.err  11-pylint-copr-json-old.err  sync.sh
tests/diff5.8-kernel/: 00-add.err  00-fix.err  00-new.err  00-old.err  kernel-2.6.18-294.el5.err  kernel-2.6.18-296.el5.err
tests/diff5.9-kernel/: 00-new.err
tests/diff6.4-kernel/: 00-new.err
tests/diff6.4-ksh/: 00-add-z.err  00-add.err  00-fix.err  00-new.err  00-old.err
tests/diff6.4-papi/: 00-add.err  00-fix.err  00-new.err  00-old.err
tests/diff6.4-rpm/: 00-add.err  00-fix-z.err  00-fix.err
tests/diff6.4-samba4/: 00-add-z.err  00-fix.err
tests/diff7.0-fftw/: 00-fix-z.err  00-fix.err  00-new.err  fftw-3.2.2-5.fc15.err  fftw-3.3-2.fc17.err
tests/diff7.0-icu/: 00-add-z.err  00-add.err  00-fix-z.err  00-fix.err  00-new.err  icu-4.4.2-7.fc15.err  icu-4.8.1-1.fc17.err
tests/diff7.0-libssh/: 00-add-z.err  00-add.err  00-fix-z.err  00-fix.err  libssh-0.4.8-2.fc15.err  libssh-0.5.0-1.fc16.err
tests/diff7.0-qt/: 00-add.err  00-fix-z.err  00-fix.err  qt-4.7.2-8.fc15-truncated.err  qt-4.8.0-0.11.beta1.fc17-truncated.err
tests/diff7.0-sudo/: 00-add-z.err  (+6 more)
(+188 files in other folders)
